--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,8 +8,7 @@
 @import url('./photo.css');
 
 .container {
-  margin-left: 50px;
-  margin-top: 50px;
+  margin: 0 auto;
   border-radius: 16px;
   width: 356px;
   height: 474px;
@@ -32,40 +31,71 @@
   line-height: 1.16667;
   letter-spacing: -0.04em;
   color: #fff;
+  gap: 14px;
 }
 
-.support-list {
+/* .support-list {
   padding-left: 40px;
   display: flex;
   flex-direction: column;
   gap: 20px;
   justify-content: center;
-}
+} */
 
 .list {
+  display: flex;
   /* width: 143px; */
   height: 32px;
+  gap: 16px;
+  filter: brightness(0) invert(1);
+  align-items: center;
 }
 
-.link {
+/* .link {
   filter: brightness(0) invert(1);
   mix-blend-mode: luminosity;
-}
+} */
 
-.load-more {
+.scroll-button {
   display: flex;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #fff;
-  border-radius: 8px;
-  padding: 8px 16px;
-  width: 150px;
-  height: 40px;
-  background: #4e75ff;
+
+  /* fill: #4f2ee8; */
+  transition: transform 0.5s ease-in-out;
+  /* padding: 8px 16px; */
+  width: 32px;
+  height: 32px;
+  border-radius: 100%;
+  align-items: center;
   border: none;
   justify-content: center;
-  margin: auto;
+  margin: 24px auto;
 }
+
+.swiper {
+  width: 600px;
+  height: 300px;
+}
+
+.swiper-container {
+  width: 300px;
+  /* height: 292px; */
+  display: flex;
+  flex-direction: column;
+  /* gap: 20px; */
+  justify-content: center;
+  padding-left: 40px;
+}
+.swiper-slide {
+  display: flex;
+  /* width: 143px; */
+  height: 45px;
+  /* gap: 16px; */
+  filter: brightness(0) invert(1);
+  align-items: center;
+}
+
+/* Використати у JS для гортання вверх */
+
+/* .btn-up {
+  transform: rotateX(180deg);
+} */
